--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-/[Aa]ssets/[Mm]ini Legion Grunt PBR HP Polyart/
-/[Aa]ssets/[Bb]attleRoyaleDuoPAPBR/
+Assets/Mini Legion Grunt PBR HP Polyart/
+Assets/BattleRoyaleDuoPAPBR/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
